Réorganisation des contrôleurs et ajout de tests.